--- a/index.html
+++ b/index.html
@@ -13,107 +13,124 @@
       --divider: rgba(0,0,0,0.1);
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; width: 100%; }
     body {
       font-family: 'Inter', sans-serif;
       background: var(--bg);
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      padding: 20px;
+      align-items: center;
+      overflow: hidden;
     }
     .directory {
-      width: 700px;
+      width: 100vw; /* full kiosk width */
+      height: 95vh;
       background: #fff;
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
       overflow: hidden;
+      position: relative;
     }
+    .fade-out { animation: fadeOut 1s forwards; }
+
     .header {
       text-align: center;
-      padding: 20px;
-      background: #fff;
+      padding: 2vh 0;
+      flex-shrink: 0;
     }
+    .header h1, .header h2 { opacity: 0; }
     .header h1 {
       color: var(--accent);
-      font-size: 32px;
       font-weight: 800;
+      margin: 0;
+      font-size: 2rem;
+      transform: scale(0.8);
     }
     .header h2 {
-      font-size: 28px;
       font-weight: 600;
-      margin-top: 6px;
+      margin: 0;
+      font-size: 1.5rem;
+      transform: translateY(20px);
     }
+
     .list {
       display: flex;
       flex-direction: column-reverse;
       border-top: 1px solid var(--divider);
+      flex: 1;
+      overflow: hidden;
     }
+
     .row {
       display: grid;
-      grid-template-columns: 80px 1px auto;
+      grid-template-columns: 12vw 1.5vw auto;
       align-items: center;
-      padding: 16px 12px;
       border-bottom: 1px solid var(--divider);
+      padding: 0 1vw;
+      gap: 0.5vw;
       opacity: 0;
-      transform: translateY(40px) scale(0.5);
-      animation: rowAnim 0.6s forwards;
+      transform: translateY(0);
+      height: auto;
     }
-    .row:last-child {
-      border-bottom: none;
-    }
+    .row.show { animation: fadeSlideUp 0.8s forwards; }
+
     .divider-vertical {
-      width: 1px;
-      height: 70px;
-      background: linear-gradient(to bottom, transparent, var(--divider), transparent);
+      width: 2px;
       justify-self: center;
+      background: linear-gradient(to bottom, transparent, var(--divider), transparent);
     }
+
     .floor {
-      font-size: 16px;
-      font-weight: 600;
-      color: var(--muted);
-      text-align: left;
-      padding-left: 10px;
-      white-space: nowrap;
-    }
-    .logo {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 10px;
-      flex-wrap: wrap;
+      opacity: 0;
+      transform: scale(0.5);
+      flex-shrink: 0;
+    }
+    .floor.show { animation: popIn 0.6s forwards; }
+
+    .logo {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-wrap: wrap; /* wrap logos if too many */
+      gap: 1vw;
+      width: 100%;
     }
     .logo img {
-      width: 80px;
-      height: 80px;
-      border-radius: 12px;
+      border-radius: 12px; /* round corners */
       object-fit: contain;
       background: #f9f9f9;
-      padding: 6px;
+      width: 80px;  /* fixed width */
+      height: 80px; /* fixed height */
+      opacity: 0;
+      transform: scale(0.5);
     }
-    @keyframes rowAnim {
-      to {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-      }
-    }
+    .logo img.show { animation: popIn 0.6s forwards; }
+
+    /* Animations */
+    @keyframes fadeZoom { to { opacity: 1; transform: scale(1); } }
+    @keyframes fadeSlideUp { to { opacity: 1; transform: translateY(0); } }
+    @keyframes popIn { to { opacity: 1; transform: scale(1); } }
+    @keyframes fadeOut { to { opacity: 0; transform: scale(0.95); } }
   </style>
 </head>
 <body>
-  <div class="directory">
+  <div class="directory" id="directory">
     <div class="header">
-      <h1>Global Infocity Park</h1>
-      <h2>Block A</h2>
+      <h1 id="mainTitle">Global Infocity Park</h1>
+      <h2 id="subTitle">Block A</h2>
     </div>
-    <div class="list" id="directoryView">
-      <!-- Floors will be dynamically loaded from Firebase -->
-    </div>
+    <div class="list" id="directoryView"></div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCrGIB_YK33p_2EPTpU-klZ_3xQ5TOPm4c",
       authDomain: "adora-ad.firebaseapp.com",
@@ -129,51 +146,100 @@
     const floorsRef = ref(db, "blocks/A/floors");
 
     const listContainer = document.getElementById("directoryView");
+    const mainTitle = document.getElementById("mainTitle");
+    const subTitle = document.getElementById("subTitle");
+    const directoryDiv = document.getElementById("directory");
 
-    // Utility to add animation delays
-    function ordinal(n) { return n; } // We'll just show "Floor X"
+    let directoryData = null;
+    const loopInterval = 40000; // 40s loop
 
     onValue(floorsRef, snapshot => {
-      const data = snapshot.val();
-      listContainer.innerHTML = ""; // Clear existing rows
+      directoryData = snapshot.val();
+      startLoop();
+    });
 
-      if (!data) return;
+    function startLoop() {
+      playAnimation(); // initial
+      setInterval(() => {
+        directoryDiv.classList.add("fade-out");
+        setTimeout(() => {
+          directoryDiv.classList.remove("fade-out");
+          playAnimation();
+        }, 1000);
+      }, loopInterval);
+    }
 
-      // Sort floors numerically
-      const floorKeys = Object.keys(data).sort((a,b)=>a-b);
+    function playAnimation() {
+      if (!directoryData) return;
 
-      floorKeys.forEach((floor, i) => {
-        const tenants = data[floor]?.tenants;
-        if (!tenants) return;
+      listContainer.innerHTML = "";
+      mainTitle.style.opacity = 0; mainTitle.style.transform = "scale(0.8)";
+      subTitle.style.opacity = 0; subTitle.style.transform = "translateY(20px)";
+
+      setTimeout(() => { mainTitle.style.animation = "fadeZoom 1s forwards"; }, 200);
+      setTimeout(() => { subTitle.style.animation = "fadeSlideUp 1s forwards"; }, 1200);
+
+      const floorKeys = Object.keys(directoryData).sort((a,b)=>{
+        if(a==="GF") return -1;
+        if(b==="GF") return 1;
+        return parseInt(a)-parseInt(b);
+      });
+
+      const directoryHeight = directoryDiv.clientHeight;
+      const headerHeight = document.querySelector('.header').clientHeight;
+      const rowHeight = (directoryHeight - headerHeight) / floorKeys.length;
+
+      let globalDelay = 2000; // start after headers
+
+      floorKeys.forEach(floor => {
+        const tenants = directoryData[floor]?.tenants;
+        if(!tenants) return;
 
         const row = document.createElement("div");
         row.className = "row";
-        row.style.animationDelay = `${(i+1)*0.1}s`;
+        row.style.height = `${rowHeight}px`;
 
         const floorDiv = document.createElement("div");
         floorDiv.className = "floor";
-        floorDiv.textContent = `Floor ${floor}`;
+        const floorBtn = document.createElement("div");
+        floorBtn.style.background="#000"; floorBtn.style.color="#fff";
+        floorBtn.style.borderRadius="50%";
+        floorBtn.style.width=`${rowHeight*0.5}px`;
+        floorBtn.style.height=`${rowHeight*0.5}px`;
+        floorBtn.style.display="flex"; floorBtn.style.justifyContent="center";
+        floorBtn.style.alignItems="center";
+        floorBtn.style.fontWeight="600";
+        floorBtn.style.fontSize=`${rowHeight*0.2}px`;
+        floorBtn.textContent = floor;
+        floorDiv.appendChild(floorBtn);
 
         const divider = document.createElement("div");
         divider.className = "divider-vertical";
+        divider.style.height=`${rowHeight*0.7}px`;
 
         const logoDiv = document.createElement("div");
-        logoDiv.className = "logo";
+        logoDiv.className="logo";
 
-        Object.keys(tenants).forEach(key => {
+        Object.values(tenants).forEach((tenant, idx) => {
           const img = document.createElement("img");
-          img.src = tenants[key].logo || "https://via.placeholder.com/80";
-          img.alt = tenants[key].name || "Tenant";
+          img.src = tenant.logo || "https://via.placeholder.com/80";
+          img.alt = tenant.name || "Tenant";
+
           logoDiv.appendChild(img);
+          setTimeout(() => img.classList.add("show"), globalDelay + 400 + idx*200);
         });
 
         row.appendChild(floorDiv);
         row.appendChild(divider);
         row.appendChild(logoDiv);
-
         listContainer.appendChild(row);
+
+        setTimeout(()=>row.classList.add("show"), globalDelay);
+        setTimeout(()=>floorDiv.classList.add("show"), globalDelay+400);
+
+        globalDelay += 1000; // simple delay between floors
       });
-    });
+    }
   </script>
 </body>
 </html>
