--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="directory" id="directory">
     <div class="header">
       <h1 id="mainTitle">Global Infocity Park</h1>
-      <h2 id="subTitle">Block A</h2>
+      <h2 id="subTitle">Block-A | Core-2</h2>
     </div>
     <div class="list" id="directoryView"></div>
   </div>
